--- a/soot-infoflow-android/.classpath
+++ b/soot-infoflow-android/.classpath
@@ -1,22 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="test"/>
-	<classpathentry kind="lib" path="lib/polyglot.jar"/>
-	<classpathentry kind="lib" path="lib/AXMLPrinter2.jar" sourcepath="lib/AXMLPrinter2-src"/>
+	<classpathentry kind="src" output="target/classes" path="src">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="src" output="target/test-classes" path="test">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry combineaccessrules="false" kind="src" path="/soot-infoflow"/>
-	<classpathentry kind="lib" path="lib/axml-1.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry combineaccessrules="false" kind="src" path="/soot"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/SPLLift_neu"/>
-	<classpathentry kind="lib" path="C:/Users/Max/workspace/soot-infoflow-android/lib/slf4j-api-1.7.5.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Max/workspace/soot-infoflow-android/lib/slf4j-simple-1.7.5.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Max/Tools/MongoDB/mongo-java-driver-2.11.3.jar"/>
-	<classpathentry kind="lib" path="lib/commons-io-2.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Max/Tools/guava-16.0.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Max/Tools/junit-benchmarks-0.7.2/junit-benchmarks-0.7.2.jar"/>
-	<classpathentry kind="lib" path="/soot-infoflow/lib/config-1.3.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Max/Tools/commons-lang3-3.3.2.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry combineaccessrules="false" kind="src" path="/spllift"/>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
