--- a/loadtime-gui/conf/application.conf
+++ b/loadtime-gui/conf/application.conf
@@ -72,5 +72,4 @@ mongodb_host="localhost"
 mongodb_port=27017
 mongodb_db_name="loadtime"
 mongodb_use_auth=false
-dataPathSearch="C:\\Users\\Max\\workspace\\"
-dataPathReplace="C:\\Users\\Max\\workspace\\"
+mongodb_use_auth=false
