--- a/soot/pom.xml
+++ b/soot/pom.xml
@@ -238,9 +238,12 @@
       <artifactId>slf4j-simple</artifactId>
       <version>1.7.5</version>
     </dependency>
-
+	<dependency>
+	  	<groupId>ca.mcgill.sable</groupId>
+	  	<artifactId>jasmin</artifactId>	
+ 		 <version>2.5.0-SNAPSHOT</version>
+	</dependency>
   </dependencies>
-
   <repositories>
     <repository>
       <id>soot-snapshot</id>
