--- a/spllift/pom.xml
+++ b/spllift/pom.xml
@@ -61,7 +61,7 @@
 		    <artifactId>z3</artifactId>
 		    <version>4.3.2</version>
 		    <scope>system</scope>
-		    <systemPath>${project.basedir}/lib/com.microsoft.z3.jar</systemPath>
+		    <systemPath>${project.basedir}/lib/z3-4.3.2-x64-win/bin/com.microsoft.z3.jar</systemPath>
 		</dependency>
 	</dependencies>
 </project>
